force-app/main/default/objects/Account/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <formula>IMAGE($Label.Barcode+&apos;code=&apos;+ Id +&apos;&amp;style=325&amp;type=C128B&amp;width=200&amp;height=50&amp;xres=1&amp;font=3&apos;,&apos;code&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Barcode of the device</inlineHelpText>
    <label>Barcode</label>
    <type>Text</type>
</CustomField>