force-app/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <formula>Retail_Street_Address__c &amp; &apos;, &apos; &amp;  Retail_City__c &amp; &apos;, &apos; &amp;  TEXT(Retail_State_Province__c) &amp; &apos;, &apos; &amp; Retail_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>