force-app/main/default/objects/Account/fields/CSiDP__ID_Number__c.field-meta.xml
<CustomField>
    <fullName>CSiDP__ID_Number__c</fullName>
    <description>Records the identification number that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form. This field is used by document preparation integrations.</description>
    <inlineHelpText>Records the identification number that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form.</inlineHelpText>
    <label>ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>