force-app/main/default/objects/Account/fields/CSiDP__ID_Type__c.field-meta.xml
<CustomField>
    <fullName>CSiDP__ID_Type__c</fullName>
    <description>Indicates the type of identification that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form. This field is used by document preparation integrations.</description>
    <inlineHelpText>Indicates the type of identification that the non-individual borrower is providing for the institution&apos;s customer identification verification (CIV) form.</inlineHelpText>
    <label>ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secretary of State</fullName>
            </value>
            <value>
                <fullName>Articles of Incorporation</fullName>
            </value>
            <value>
                <fullName>Partnership Agreement</fullName>
            </value>
            <value>
                <fullName>Certificate of Existence</fullName>
            </value>
            <value>
                <fullName>Certificate of Partnership</fullName>
            </value>
            <value>
                <fullName>Registration of Partnership</fullName>
            </value>
            <value>
                <fullName>Trust Agreement</fullName>
            </value>
            <value>
                <fullName>IRS TIN Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>