force-app/main/default/objects/Account/fields/CSiDP__Limited_Liability_Management_Type__c.field-meta.xml
<CustomField>
    <fullName>CSiDP__Limited_Liability_Management_Type__c</fullName>
    <description>This field is manually populated. It is used for document preparation. This field is used to indicate the management type of a Limited Liability Company.</description>
    <inlineHelpText>This field is used to indicate the management type of a Limited Liability Company.</inlineHelpText>
    <label>-D Limited Liability Management Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member Managed</fullName>
            </value>
            <value>
                <fullName>Manager Managed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>