force-app/main/default/objects/Account/fields/CSiDP__Professional_LLC__c.field-meta.xml
<CustomField>
    <fullName>CSiDP__Professional_LLC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually populated. It is used for document preparation. This field is used to indicate if a Limited Liability Company is professional or not.</description>
    <label>Professional LLC</label>
    <type>Checkbox</type>
</CustomField>