force-app/main/default/objects/Account/fields/Experian_BIN__c.field-meta.xml
<CustomField>
    <fullName>Experian_BIN__c</fullName>
    <label>Experian BIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>