force-app/main/default/objects/Account/fields/experian_business_product__c.field-meta.xml
<CustomField>
    <fullName>experian_business_product__c</fullName>
    <label>Experian Business Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intelliscore</fullName>
                <default>true</default>
                <label>Intelliscore</label>
            </value>
            <value>
                <fullName>PPRPro</fullName>
                <label>Premier Profile</label>
            </value>
            <value>
                <fullName>SBCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>