force-app/main/default/objects/Account/fields/Integration_Source__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source__c</fullName>
    <description>Custom field to designate source Credit Union of object. Edited by Ansuman for demo</description>
    <label>Integration Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>