force-app/main/default/objects/Account/fields/NAICS_Code_1__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAICS Code</label>
    <referenceTo>NAICS_Code__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>