force-app/main/default/objects/Account/fields/NAICS_Industry__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Industry__c</fullName>
    <formula>NAICS_Code_1__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Industry</label>
    <type>Text</type>
</CustomField>