force-app/main/default/objects/Account/fields/NAICSCode__c.field-meta.xml
<CustomField>
    <fullName>NAICSCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Type a NAICS code to search and pick from the list</inlineHelpText>
    <label>NAICS Code</label>
    <referenceTo>NAICS_Code__c</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>