force-app/main/default/objects/Account/fields/ncoe_Current_or_Former_PEP__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Current_or_Former_PEP__c</fullName>
    <inlineHelpText>Designates if the entity is a current or former Politically Exposed Person</inlineHelpText>
    <label>Current or Former PEP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>