force-app/main/default/objects/Account/fields/ncoe_Date_Business_Established__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Date_Business_Established__c</fullName>
    <inlineHelpText>If uncertain of exact date, select first date of the month</inlineHelpText>
    <label>Date Business Established</label>
    <type>Date</type>
</CustomField>