force-app/main/default/objects/Account/fields/ncoe_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>