force-app/main/default/objects/Account/fields/ncoe_First_Name__c.field-meta.xml
<CustomField>
    <fullName>ncoe_First_Name__c</fullName>
    <label>First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>