force-app/main/default/objects/Account/fields/ncoe_Gross_Annual_Personal_Income__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Gross_Annual_Personal_Income__c</fullName>
    <inlineHelpText>Input gross annual income as reported on personal tax return</inlineHelpText>
    <label>Gross Annual Personal Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>