force-app/main/default/objects/Account/fields/ncoe_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>