force-app/main/default/objects/Account/fields/ncoe_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Middle_Name__c</fullName>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>