force-app/main/default/objects/Account/fields/ncoe_Other_Income__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Other_Income__c</fullName>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>