force-app/main/default/objects/Account/fields/ncoe_Other_Income_Description__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Other_Income_Description__c</fullName>
    <label>Other Income Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>