force-app/main/default/objects/Account/fields/ncoe_Personal_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Personal_Net_Worth__c</fullName>
    <inlineHelpText>Input net worth provided on personal financial statement</inlineHelpText>
    <label>Personal Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>