force-app/main/default/objects/Account/fields/ncoe_Political_Position_of_the_Officer__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Political_Position_of_the_Officer__c</fullName>
    <inlineHelpText>Designates the foreing officer&apos;s political position</inlineHelpText>
    <label>Political Position of the Officer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>