force-app/main/default/objects/Account/fields/ncoe_Relationship_to_PEP__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Relationship_to_PEP__c</fullName>
    <inlineHelpText>Designates family relation between entity and Politically Exposed Person</inlineHelpText>
    <label>Relationship to PEP</label>
    <length>80</length>
    <type>Text</type>
</CustomField>