force-app/main/default/objects/Account/fields/ncoe_Relative_or_Close_Associate_of_a_Cu__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Relative_or_Close_Associate_of_a_Cu__c</fullName>
    <inlineHelpText>Designates if the entity is related to a current or former Politically Exposed Person</inlineHelpText>
    <label>Relative or Close Associate of a Current</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>