force-app/main/default/objects/Account/fields/ncoe_Title__c.field-meta.xml
<CustomField>
    <fullName>ncoe_Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>