force-app/main/default/objects/Account/fields/NLP__NAICS_Look_up__c.field-meta.xml
<CustomField>
    <fullName>NLP__NAICS_Look_up__c</fullName>
    <formula>HYPERLINK(&quot;/apex/nlp__NAICS_Lookup?Id=&quot;&amp;Id, &quot;Click to look-up NAICS #&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Look-up</label>
    <type>Text</type>
</CustomField>