force-app/main/default/objects/Account/fields/Number_of_Open_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Open_Conditions__c</fullName>
    <description>Shows Number of conditions where status is &apos; Not Satisfied&apos;.</description>
    <inlineHelpText>Shows Number of conditions where status is &apos; Not Satisfied&apos;.</inlineHelpText>
    <label>Number of Open Conditions</label>
    <summaryFilterItems>
        <field>Condition__c.Status__c</field>
        <operation>equals</operation>
        <value>Not Satisfied</value>
    </summaryFilterItems>
    <summaryForeignKey>Condition__c.Relationship__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>