force-app/main/default/objects/Account/fields/PayNet_Id__c.field-meta.xml
<CustomField>
    <fullName>PayNet_Id__c</fullName>
    <label>PayNet Id</label>
    <type>AutoNumber</type>
</CustomField>