force-app/main/default/objects/Account/fields/Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_1__c</fullName>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist_2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>