force-app/main/default/objects/Account/fields/Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Picklist_2__c</fullName>
    <label>Picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist_3__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>