force-app/main/default/objects/Account/fields/PMCS__Consumed_Amount__c.field-meta.xml
<CustomField>
    <fullName>PMCS__Consumed_Amount__c</fullName>
    <label>Consumed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>