force-app/main/default/objects/Account/fields/PMCS__Consumed_Time__c.field-meta.xml
<CustomField>
    <fullName>PMCS__Consumed_Time__c</fullName>
    <label>Consumed Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>