force-app/main/default/objects/Account/fields/PMCS__Gainorloss__c.field-meta.xml
<CustomField>
    <fullName>PMCS__Gainorloss__c</fullName>
    <formula>PMCS__Planned_Amount__c  -  PMCS__Consumed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gainorloss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>