force-app/main/default/objects/Account/fields/PMCS__Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>PMCS__Planned_Amount__c</fullName>
    <label>Planned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>