force-app/main/default/objects/Account/fields/pw_ic__IndustryCodeLookup__c.field-meta.xml
<CustomField>
    <fullName>pw_ic__IndustryCodeLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Code Lookup</label>
    <referenceTo>pw_ic__IndustryCode__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>