force-app/main/default/objects/Account/fields/pw_ic__SIC_Text__c.field-meta.xml
<CustomField>
    <fullName>pw_ic__SIC_Text__c</fullName>
    <formula>pw_ic__IndustryCodeLookup__r.pw_ic__Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SIC Text</label>
    <type>Text</type>
</CustomField>