force-app/main/default/objects/Account/fields/Retail_City__c.field-meta.xml
<CustomField>
    <fullName>Retail_City__c</fullName>
    <description>This field has created to use on Customer onboarding</description>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>