force-app/main/default/objects/Account/fields/Retail_County__c.field-meta.xml
<CustomField>
    <fullName>Retail_County__c</fullName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>