force-app/main/default/objects/Account/fields/Retail_Date_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Retail_Date_of_Establishment__c</fullName>
    <description>This field has created as part of Relationship UI feature</description>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>