force-app/main/default/objects/Account/fields/Retail_Email__c.field-meta.xml
<CustomField>
    <fullName>Retail_Email__c</fullName>
    <description>This field is used in global search.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>