force-app/main/default/objects/Account/fields/Retail_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_City__c</fullName>
    <description>This field has created as a part of Relationship UI feature</description>
    <label>Mailing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>