force-app/main/default/objects/Account/fields/Retail_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_Country__c</fullName>
    <description>This field has created as part of Relationship UI feature</description>
    <label>Mailing Country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>