force-app/main/default/objects/Account/fields/Retail_Mailing_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_State_Province__c</fullName>
    <description>This field has created as part of Customer Onboarding feature</description>
    <label>Mailing State / Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>