force-app/main/default/objects/Account/fields/Retail_Mailing_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_Street_Address__c</fullName>
    <description>This field has created as part of Relationship UI feature</description>
    <label>Mailing Street Address</label>
    <type>TextArea</type>
</CustomField>