force-app/main/default/objects/Account/fields/Retail_Mailing_Zip_Code_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_Zip_Code_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing Zip / Postal Code</label>
    <referenceTo>Retail_County__c</referenceTo>
    <relationshipLabel>Accounts (Mailing Zip / Postal Code)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>