force-app/main/default/objects/Account/fields/Retail_Mailing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Retail_Mailing_Zip_Postal_Code__c</fullName>
    <description>This field is being used on Business details UI</description>
    <label>Mailing Zip / Postal Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>