force-app/main/default/objects/Account/fields/Retail_Paynet_Score__c.field-meta.xml
<CustomField>
    <fullName>Retail_Paynet_Score__c</fullName>
    <description>This is populated with Paynet score whenever the credit report is generated</description>
    <label>Paynet Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>