force-app/main/default/objects/Account/fields/Retail_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Retail_Phone_Number__c</fullName>
    <description>This field has created to use in UI lookup field set.</description>
    <formula>IF(ISPICKVAL(Type,&apos;Individual&apos;), Retail_PrimaryContact__r.Phone, Phone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>