force-app/main/default/objects/Account/fields/Retail_Physical_Address_is_the_same_mail__c.field-meta.xml
<CustomField>
    <fullName>Retail_Physical_Address_is_the_same_mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to use for Customer Onboarding feature</description>
    <label>Physical Address is the same as mailing</label>
    <type>Checkbox</type>
</CustomField>