force-app/main/default/objects/Account/fields/Retail_Physical_Address_same_as_mailing__c.field-meta.xml
<CustomField>
    <fullName>Retail_Physical_Address_same_as_mailing__c</fullName>
    <description>This is used in Customer on-boarding for Business Relationship.</description>
    <label>Physical Address is the same as mailing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>