force-app/main/default/objects/Account/fields/Retail_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>Retail_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated with the Contact which is marked as Primary</description>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>