force-app/main/default/objects/Account/fields/Retail_Principal_Office_City__c.field-meta.xml
<CustomField>
    <fullName>Retail_Principal_Office_City__c</fullName>
    <description>This field has created as part of CSI module and used on Customer Onboarding.</description>
    <label>Principal Office City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>