force-app/main/default/objects/Account/fields/Retail_Principal_Office_State__c.field-meta.xml
<CustomField>
    <fullName>Retail_Principal_Office_State__c</fullName>
    <description>This field has created as part of CSI module and used on Customer onboarding</description>
    <label>Principal Office State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>